--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -14,3 +14,8 @@
   publisher = "Utrecht University",
   year = 2011
 }
+@online{curvefit,
+  url = "http://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.optimize.curve_fit.html",
+  title = "Doc: scipy.optimize.curve\_fit",
+  year = 2014
+}
