--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -157,7 +157,7 @@ N = 2^n
 
 The number of ways to the position $x$ after n steps can be obtained by \effect{Pascal's triangle}.
 
-\begin{figure}[ht!]
+\begin{figure}[H]
 \centering
 \begin{tikzpicture}[description/.style={fill=white,inner sep=2pt}]
 \matrix (m) [matrix of math nodes, row sep=1.5em,
@@ -376,6 +376,60 @@ The errorbars in the figure above are obtained from the variance of the fitting 
 
 \newpage
 \section{Finite plates}
+
+\begin{figure}[H]
+\centering
+\begin{tikzpicture}[scale=.4, z={(-.707,-.3)}]
+    \draw (6,0,0) -- (0,0,0);
+    \draw (6,0,0) -- (6,0,-3);
+    \draw (6,3,-3) -- (6,3,0);
+    \draw (6,3,0) -- (0,3,0);
+    \draw (0,0,-3) -- (6,0,-3);
+    \draw (0,0,0) -- (0,0,-3); 
+    \draw[dashed] (0,3,-3) -- (6,3,-3);
+    \draw[dashed] (0,3,0) -- (0,3,-3);
+    
+    \draw (0,3,0) -- (0,10,0);
+    \draw[dashed] (0,3,-3) -- (0,10,-3);
+    \draw[dashed] (6,3,-3) -- (6,10,-3);
+    \draw (6,3,0) -- (6,10,0);
+    \draw (0,0,0) -- (0,-7,0);
+    \draw[dashed] (0,0,-3) -- (0,-7,-3);
+    \draw (6,0,-3) -- (6,-7,-3);
+    \draw (6,0,0) -- (6,-7,0);
+    
+%    \draw (0,-7,0) -- (6,-7,0);
+%    \draw (6,-7,0) -- (6,-7,-3);
+    
+    \draw[thick] (-5,10,2.5) -- (11,10,2.5);
+    \draw[thick] (-5,10,-5.5) -- (11,10,-5.5);
+    \draw[thick] (-5,10,2.5) -- (-5,10,-5.5);
+    \draw[thick] (11,10,2.5) -- (11,10,-5.5);    
+    \draw[thick] (-5,-7,2.5) -- (11,-7,2.5);
+    \draw[thick,dashed] (-5,-7,-5.5) -- (11,-7,-5.5);
+    \draw[thick,dashed] (-5,-7,2.5) -- (-5,-7,-5.5);
+    \draw[thick] (11,-7,2.5) -- (11,-7,-5.5);
+    \draw[thick] (-5,-7,2.5) -- (-5,10,2.5);    
+    \draw[thick] (11,-7,2.5) -- (11,10,2.5);
+    \draw[thick] (11,-7,-5.5) -- (11,10,-5.5);
+    \draw[thick,dashed] (-5,-7,-5.5) -- (-5,10,-5.5);
+    
+    \draw[arrows=<->] (0.1,-0.3,0) -- (5.9,-0.3,0);
+    \draw[] (3,-0.9,0) node{$l$};
+    \draw[arrows=<->] (6,-0.3,-0.1) -- (6,-0.3,-2.9);
+    \draw[] (6,-0.9,-1.5) node{$l$};
+    \draw[arrows=<->] (-4.9,-7.3,2.5) -- (10.9,-7.3,2.5);
+    \draw[] (3,-8.0,2.5) node{$L$};
+    \draw[arrows=<->] (11,-7.3,2.4) -- (11,-7.3,-5.4);
+    \draw[] (11,-8,-1.5) node{$L$};
+    
+    \draw (3,0,-1.5) node{B};
+    \draw (3,3,-1.5) node{A};
+    \draw[arrows=<->] (-0.4,0.2,0) -- (-0.4,2.8,0);
+    \draw (0.2,1.5,0) node{$H$};
+\end{tikzpicture}
+\caption{Schematic structure of the finite plate system}
+\end{figure}
 
 \newpage
 \section{Conclusion}
