--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -8,6 +8,11 @@
   title = "Conductivity Fluctuations in Cylindrical Pores",
   year = 2014
 }
+@article{netzpaper2,
+  author = "Roland Netz",
+  title = "N/A",
+  year = 2014
+}
 @article{brownian,
   title = "Notes on Brownian Motion",
   chapter = "3",
